@@ -2,6 +2,8 @@
 * 0.2.23
 *
 
+- Added new subagent LOGWATCH for log monitoring
+- Implemented syslog message monitoring on built-in syslog server
 - New agent configuration parameter: WaitForProcess
 
 
